<?xml version="1.0"?>
<package format="3">
  <name>safety_controller</name>
  <version>0.0.1</version>
  <description>Controlador de seguridad para cmd_policy</description>
  <maintainer email="jhonlarico11@gmail.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
